--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "psycopg2>=2.9.10",
     "psycopg[binary]>=3.2.9",
     "python-jose[cryptography]>=3.5.0",
+    "slowapi>=0.1.9",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
