--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.5",
     "fastapi>=0.116.1",
+    "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2>=2.9.10",
     "psycopg[binary]>=3.2.9",
+    "pytest>=8.4.1",
     "python-jose[cryptography]>=3.5.0",
     "slowapi>=0.1.9",
     "sqlalchemy>=2.0.43",
