--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,91 +1,50 @@
 services:
-  redis:
-    image: redis:6.2
-    container_name: int64-bookscrap-redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: int64-bookscrap-frontend
-    ports:
-      - "5010:3000"
+  db:
+    image: postgres:15
+    restart: always
     environment:
-      # URL de la API backend
-      - NEXT_PUBLIC_API_URL=http://127.0.0.1:18000
+      POSTGRES_USER: todo_user
+      POSTGRES_PASSWORD: todo_pass
+      POSTGRES_DB: todo_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U todo_user -d todo_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  migrations:
+    build: ./backend
     depends_on:
-      - backend
-    restart: unless-stopped
-    # healthcheck:
-    #   test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
-    #   interval: 30s
-    #   timeout: 10s
-    #   retries: 3
-  # selenium:
-  #   image: selenium/standalone-chrome:latest
-  #   container_name: recruiter-dev-selenium
-  #   ports:
-  #     - "14440:4444"
-  #   environment:
-  #     - SE_NODE_ENABLE_MANAGED_DOWNLOADS=true
-  #     - SE_OPTS=--enable-managed-downloads true
-  #     - SE_LOG_LEVEL=INFO
-  #   #      - SE_BROWSER_ARGS_INCOGNITO=--incognitos
-  #   restart: always
-  #   shm_size: 4gb
+      - db
+    environment:
+      DATABASE_URL: postgresql://todo_user:todo_pass@db:5432/todo_db
+    command: alembic upgrade head
+
+  tests:
+    build: ./backend
+    depends_on:
+      - db
+      - migrations
+    environment:
+      DATABASE_URL: postgresql://todo_user:todo_pass@db:5432/todo_db
+    command: uv pytest backend/api/tests/
+
 
   backend:
-    build:
-      context: ./backend # Cambiado de ./backend a .
-    container_name: int64-bookscrap-backend
-    command: poetry run uvicorn app.api.main:app --host 0.0.0.0 --port 7013
-    ports:
-      - "18000:7013"
-    volumes:
-      - ./backend:/app
-    depends_on:
-      - redis
-    environment:
-      - REDIS_HOST=recruiter-dev-redis
-      - REDIS_PORT=6379
-      - REMOTE_DRIVER_URL=http://recruiter-dev-selenium:4444 # URL completa de Selenium
-    restart: always # Agregamos restart policy
-
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #   container_name: recruiter-dev-frontend
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - ./frontend:/app
-    #depends_on:
-    #  - n8n
-
-  # n8n:
-  #   image: n8nio/n8n
-  #   container_name: recruiter-dev-n8n
-  #   ports:
-  #     - "5678:5678"
-  #   environment:
-  #     - N8N_BASIC_AUTH_ACTIVE=true
-  #     - N8N_BASIC_AUTH_USER=admin
-  #     - N8N_BASIC_AUTH_PASSWORD=admin
-  #     - N8N_HOST=n8n
-  #     - N8N_PORT=5678
-  #     - REDIS_HOST=redis
-  #     - REDIS_PORT=6379
-  #     - N8N_SECURE_COOKIE=false
-  #   volumes:
-  #     - n8n_data:/home/node/.n8n
-  #   depends_on:
-  #     - redis
-  #     - backend
+      build: .
+      depends_on:
+        - db
+        - migrations
+        - tests
+      environment:
+        DATABASE_URL: postgresql://todo_user:todo_pass@db:5432/todo_db
+      ports:
+        - "8000:8000"
+      command: uv run uvicorn backend.api.app:app --host 0.0.0.0 --port 8000 --workers 4
 
 volumes:
-  redis_data:
-  n8n_data:
+  postgres_data:
