--- a/.github/workflows/test-postgres.yml
+++ b/.github/workflows/test-postgres.yml
@@ -42,7 +42,7 @@ jobs:
       env:
         DATABASE_URL: postgresql://todo_user:todo_pass@127.0.0.1:5432/todo_db
       run: |
-        uv run alembic upgrade head
+        uv run alembic -x dburl=postgresql://todo_user:todo_pass@localhost:5432/todo_db upgrade head
       
     - name: Run tests
       run: |
