--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - db
     environment:
       DATABASE_URL: postgresql://todo_user:todo_pass@db:5432/todo_db
-    command: alembic upgrade head
+    command: uv run alembic -x dburl=postgresql://todo_user:todo_pass@localhost:5432/todo_db upgrade head
 
   tests:
     build: ./backend
@@ -35,7 +35,8 @@ services:
 
 
   backend:
-      build: .
+      build: ./backend
+      container_name: todo-backend
       depends_on:
         - db
         - migrations
