--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
-    "psycopg2>=2.9.10",
+    "psycopg2[binary]>=2.9.10",
     "psycopg[binary]>=3.2.9",
     "pytest>=8.4.1",
     "python-jose[cryptography]>=3.5.0",
