--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.13-slim
 
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    gcc \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -9,5 +14,5 @@ RUN pip install --upgrade pip
 
 RUN pip install uv
 
-RUN pip install -r requirements.txt
+RUN uv sync
 
