--- a/.github/workflows/test-backend-postgres.yml
+++ b/.github/workflows/test-backend-postgres.yml
@@ -40,7 +40,7 @@ jobs:
   
     - name: Run migrations
       env:
-        DATABASE_URL: postgresql://todo_user:todo_pass@127.0.0.1:5432/todo_db
+        DATABASE_URL: postgresql://todo_user:todo_pass@localhost:5432/todo_db
       run: |
         uv run alembic -x dburl=postgresql://todo_user:todo_pass@localhost:5432/todo_db upgrade head
       
@@ -48,5 +48,5 @@ jobs:
       run: |
         uv run pytest ./backend/api/tests
       env:
-        DATABASE_URL: postgresql://todo_user:todo_pass@127.0.0.1:5432/todo_db
+        DATABASE_URL: postgresql://todo_user:todo_pass@localhost:5432/todo_db
         # Asegúrate de que la variable de entorno DATABASE_URL coincide con la configuración de tu base de datos
