--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - migrations
     environment:
       DATABASE_URL: postgresql://todo_user:todo_pass@db:5432/todo_db
-    command: uv run pytest /api/tests/
+    command: uv run pytest
 
 
   backend:
