--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
         DATABASE_URL: postgresql://todo_user:todo_pass@db:5432/todo_db
       ports:
         - "8000:8000"
-      command: uv run uvicorn backend.api.app:app --host 0.0.0.0 --port 8000 --workers 4
+      command: uv run uvicorn api.app:app --host 0.0.0.0 --port 8000 --workers 4
 
 volumes:
   postgres_data:
